# cirsat

./: .clang-format  .gitignore  .readthedocs.yml  CMakeLists.txt  LICENSE  README.md  cirsat.cpp  main.cpp  tags
benchmarks/aiger/: c17.aiger  c1908.aiger  c432.aiger  c499.aiger  c5315.aiger  c6288.aiger  c7552.aiger
benchmarks/aiger/SAT/: 9sym.aig  9symml.aig  Z9sym.aig  cm150a.aig  i2.aig  max46.aig  mux.aig  parity.aig  ryy6.aig
benchmarks/aiger/UNSAT/: alu3.aig  b10.aig  comp.aig  in0.aig  in4.aig  m2.aig  max128.aig  mp2d.aig  pope.aig
benchmarks/aiger/UNSAT/ISCAS85/: c1355.aiger  c17_miter.aiger  c2670.aiger  c3540.aiger  c880.aiger
benchmarks/bench/: c17.bench  c17UNSAT.bench  c432.bench  c7552.bench  rc2670.bench  rc3540.bench  rc6288.bench  rc7552.bench
benchmarks/bench_lut/: c1355.bench  c17.bench  c17_x.bench  c1908.bench  c2670.bench  c3540.bench  c432.bench  c432_x.bench  c499.bench  c5315.bench  c6288.bench  c7552.bench  c880.bench
docs/source/: about.rst  conf.py  index.rst
example/: CMakeLists.txt  example.cpp
example/SAT/: 9sym.aag  9symml.aag  Z9sym.aag  cm150a.aag  i2.aag  max46.aag  mux.aag  parity.aag  ryy6.aag
example/UNSAT/: alu3.aag  b10.aag  comp.aag  in0.aag  in4.aag  m2.aag  max128.aag  mp2d.aag  pope.aag
examples/: CMakeLists.txt  simple_circuit.cpp
include/: CMakeLists.txt  aig.h  aig.hpp  aig_dpll_solver.hpp  aiger_reader.hpp  bench_reader.hpp  lut_dpll_solver.hpp  lut_network.hpp  mffc_view.hpp  myfunction.h  parser.h  solver.h  solver.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  aig.cpp  parser.cpp  solver.cpp
test/: CMakeLists.txt  aiger_reader.cpp  cirsat_maj.cpp  maj.aag  solver_basic.cpp  test.cpp
tools/: create_file.py  format_code.sh  install_hooks.sh
